much color edits

--- a/about_page.html
+++ b/about_page.html
@@ -19,7 +19,7 @@
         <a href="#"><li class="sidebar-el">Menu element</li></a>
     </ul>
 </div>
-<div class="main-space add-bg2">
+<div class="main-space">
     <div class="nav">
     <div class="logo">
         FrontLab.
@@ -57,24 +57,24 @@
                     </div>
                </div>
                <div class="member-description">
-                Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
+                    Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
                </div>
            </div>
            <div class="member" id="javascriptdev">
-            <div class="member-head">
-                 <div class="avatar">
-                     <img src="img/avatar-3.svg" alt="">
-                 </div>
-                 <div class="name-and-skill">
-                     <p class="member-name">Олег Дядечко</p>
-                     <p class="member-skill">JavaScript разработчик</p>
-                 </div>
+                <div class="member-head">
+                    <div class="avatar">
+                        <img src="img/avatar-3.svg" alt="">
+                    </div>
+                    <div class="name-and-skill">
+                        <p class="member-name">Олег Дядечко</p>
+                        <p class="member-skill">JavaScript разработчик</p>
+                    </div>
+                </div>
+                <div class="member-description">
+                    Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
+                </div>
             </div>
-            <div class="member-description">
-             Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
-            </div>
-           </div>
-           <div class="member" id="webdesigner">
+            <div class="member" id="webdesigner">
                 <div class="member-head">
                     <div class="avatar">
                         <img src="img/avatar-4.svg" alt="">
@@ -85,26 +85,26 @@
                     </div>
                 </div>
                 <div class="member-description">
+                    Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
+                </div>
+            </div>
+            <div class="member" id="smm">
+                <div class="member-head">
+                    <div class="avatar">
+                        <img src="img/avatar-2.svg" alt="">
+                    </div>
+                    <div class="name-and-skill">
+                        <p class="member-name">Ксения Серова</p>
+                        <p class="member-skill">SMM менеджер</p>
+                    </div>
+                </div>
+                <div class="member-description">
                 Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
                 </div>
-           </div>
-           <div class="member" id="smm">
-            <div class="member-head">
-                <div class="avatar">
-                    <img src="img/avatar-2.svg" alt="">
-                </div>
-                <div class="name-and-skill">
-                    <p class="member-name">Ксения Серова</p>
-                    <p class="member-skill">SMM менеджер</p>
-                </div>
             </div>
-            <div class="member-description">
-            Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.
+            <div class="nowdays block">
+                <p class="block-title">Настоящее время</p>
             </div>
-       </div>
-        </div>
-        <div class="nowdays block">
-            <p class="block-title">Настоящее время</p>
         </div>
     </div>
 <script src="js/main.js"></script>
