--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#"><li class="sidebar-el">Menu element</li></a>
     </ul>
 </div>
-<div class="main-space container frist-screen">
+<div class="main-space container">
     <div class="nav">
     <div class="logo">
         FrontLab.
@@ -28,10 +28,10 @@
         <img src="img/icons/menu-1.svg" alt="">
     </div>
 </div>
-    <div class="header section">
-        <p class="header-info"><img src="img/icons/flash-1.svg" alt="">Студия web разработки</p>
-        <p class="header-title">Разработка и <span class="bold">продвижение</span> вашего <span class="bold accent">сайта.</span></p>
-        <p class="header-subtitle">Проектирование и разработка сайтов и web страниц.</p>
+    <div class="promo section">
+        <p class="promo-info"><img src="img/icons/flash-1.svg" alt="">Студия web разработки</p>
+        <p class="promo-title">Разработка и <span class="bold">продвижение</span> вашего <span class="bold accent">сайта.</span></p>
+        <p class="promo-subtitle">Проектирование и разработка сайтов и web страниц.</p>
         <div class="statistic">
             <div class="st" id="projects">
                 <p class="st-title">13</p>
