--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 </div>
 <script src="js/main.js"></script>
-<script src="js/burger.js"></script>
+<script src="js/sidebar.js"></script>
 <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="js/scrollreveal.js"></script>
 </body>
