--- a/about_page.html
+++ b/about_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="img/icons/favicon.png">
+    <link rel="icon" href="img/icons/favicon.svg">
     <title>FrontLab</title>
 </head>
 <body>
