remake structure of pages

--- a/about_page.html
+++ b/about_page.html
@@ -25,7 +25,7 @@
         FrontLab.
     </div>
     <div class="sidebar-btn" id="sidebar-btn" onclick="sidebar()">
-        <img src="img/icons/menu-1.svg" alt="">
+        <img src="img/icons/menu.svg" alt="">
     </div>
 </div>
     <div class="popup" id="popup">
@@ -112,57 +112,55 @@
                 <img src="img/github_example.png" alt="" id="github_example">
                 <p class="img-description">Система контроля версий "GitHub".</p>
             </div>
-            <div class="soft-block">
-                <p class="text"><span class="bold">GitHub</span> — крупнейший веб-сервис для хостинга IT-проектов и их совместной разработки.
-                <br><br>
-                Веб-сервис основан на системе контроля версий Git и разработан на Ruby on Rails и Erlang компанией GitHub, Inc (ранее Logical Awesome). Сервис бесплатен для проектов с открытым исходным кодом и (с 2019 года) небольших частных проектов, предоставляя им все возможности (включая SSL), а для крупных корпоративных проектов предлагаются различные платные тарифные планы.</p>
-                <p class="block-title">Средства разработки</p>
-                <p class="text">В своей работе мы используем самые современные и доступные технологии. Сфера web разработки развивается с огромной скоростью, поэтому мы стараемся не отставать.</p>
-                <div class="soft">
-                    <div class="soft-card" id="softcardHtml">
-                        <div class="soft-card-avatar">
+            <p class="text"><span class="bold">GitHub</span> — крупнейший веб-сервис для хостинга IT-проектов и их совместной разработки.
+            <br><br>
+            Веб-сервис основан на системе контроля версий Git и разработан на Ruby on Rails и Erlang компанией GitHub, Inc (ранее Logical Awesome). Сервис бесплатен для проектов с открытым исходным кодом и (с 2019 года) небольших частных проектов, предоставляя им все возможности (включая SSL), а для крупных корпоративных проектов предлагаются различные платные тарифные планы.</p>
+            <p class="block-title">Средства разработки</p>
+            <p class="text">В своей работе мы используем самые современные и доступные технологии. Сфера web разработки развивается с огромной скоростью, поэтому мы стараемся не отставать.</p>
+            <div class="soft">
+                <div class="soft-card">
+                    <div class="soft-head">
+                        <div class="soft-logo">
                             <img src="img/icons/html.svg" alt="">
                         </div>
-                        <div class="soft-card-info">
-                            <p class="soft-card-name">HTML 5</p>
-                            <p class="soft-card-description">Последний стабильный релиз HTML, HTML5 преобразовывает HTML из простого языка для разметки документа в платформу для разработки полноценных приложений.</p>
-                        </div>
+                        <div class="soft-name">HTML5</div>
                     </div>
-                    <div class="soft-card" id="softcardSass">
-                        <div class="soft-card-avatar">
+                    <div class="soft-description">Последний стабильный релиз HTML, HTML5 преобразовывает HTML из простого языка для разметки документа в платформу для разработки полноценных приложений. Среди других особенностей, HTML5 включает в себя новые элементы и JavaScript API для улучшения доступа к хранилищу, мультимедиа и аппаратным средствам.</div>
+                </div>
+                <div class="soft-card">
+                    <div class="soft-head">
+                        <div class="soft-logo">
                             <img src="img/icons/sass.svg" alt="">
                         </div>
-                        <div class="soft-card-info">
-                            <p class="soft-card-name">Препроцессор SASS</p>
-                            <p class="soft-card-description">Sass — это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS-кода и упрощения файлов каскадных таблиц стилей.</p>
-                        </div>
+                        <div class="soft-name">SASS</div>
                     </div>
-                    <div class="soft-card" id="softcardJs">
-                        <div class="soft-card-avatar">
+                    <div class="soft-description">модуль, включенный в Haml. Sass — это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS-кода и упрощения файлов каскадных таблиц стилей.</div>
+                </div>
+                <div class="soft-card">
+                    <div class="soft-head">
+                        <div class="soft-logo">
                             <img src="img/icons/js.svg" alt="">
                         </div>
-                        <div class="soft-card-info">
-                            <p class="soft-card-name">JavaScript</p>
-                            <p class="soft-card-description">Язык програмирования. Наиболее широкое применение находит в браузерах как язык сценариев для придания интерактивности веб-страницам.</p>
-                        </div>
+                        <div class="soft-name">JavaScript</div>
                     </div>
-                    <div class="soft-card" id="softcardNPM">
-                        <div class="soft-card-avatar">
+                    <div class="soft-description">JavaScript обычно используется как встраиваемый язык для программного доступа к объектам приложений. Наиболее широкое применение находит в браузерах как язык сценариев для придания интерактивности веб-страницам.</div>
+                </div>
+                <div class="soft-card">
+                    <div class="soft-head">
+                        <div class="soft-logo">
                             <img src="img/icons/npm.svg" alt="">
                         </div>
-                        <div class="soft-card-info">
-                            <p class="soft-card-name">NPM</p>
-                            <p class="soft-card-description">npm – это менеджер пакетов, который входит в состав Node.js. Используется разработчиками JavaScript для установки различных модулей.</p>
-                        </div>
+                        <div class="soft-name">NPM</div>
                     </div>
+                    <div class="soft-description">npm – это менеджер пакетов, который входит в состав Node.js. В течение многих лет Node широко использовался разработчиками JavaScript для обмена инструментами, установки различных модулей и управления их зависимостями.</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/sidebar.js"></script>
-<script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
-<script src="js/scrollreveal.js"></script>
+<script src="js/scroll.js"></script>
 </body>
 </html>
