--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <a href="#"><li class="sidebar-el">Menu element</li></a>
     </ul>
 </div>
-<div class="main-space container">
+<div class="main-space">
     <div class="nav">
     <div class="logo">
         FrontLab.
     </div>
     <div class="sidebar-btn" id="sidebar-btn" onclick="sidebar()">
-        <img src="img/icons/menu-1.svg" alt="">
+        <img src="img/icons/menu.svg" alt="">
     </div>
 </div>
     <div class="promo section">
@@ -53,9 +53,9 @@
         <button class="get-started-btn" id="get-started-btn">Поехали<img src="img/icons/arrow-right-1.svg" id="right-arrow" alt=""></button>
     </div>
 </div>
+<script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/sidebar.js"></script>
-<script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
-<script src="js/scrollreveal.js"></script>
+<script src="js/scroll.js"></script>
 </body>
 </html>
