--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
         FrontLab
     </div>
     <div id="sidebar-btn" onclick="openSidebar()">
-        <img src="img/icons/menu.svg" alt="sidebar button">
+        <img src="img/icons/menu.svg" alt="sidebar button" id="sidebar-btn-icon">
     </div>
 </div>
     
